--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,19 @@ body {
 input:focus {
   outline: none;
 }
+
+nav a.active {
+  color: yellow;
+  border-color: yellow;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(120deg, #000000, #00000053);
+  display: flex;
+  z-index: 1;
+}
