--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,8 @@ nav a.active {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(120deg, #000000, #00000053);
+  background: linear-gradient(120deg, #000000, #00000054);
   display: flex;
   z-index: 1;
+  backdrop-filter: blur(2px);
 }
